# eb2000

./: .gitignore  CMakeLists.txt  Color.c++  Color.h++  Exception.c++  Exception.h++  Point.h++  Screen.c++  Screen.h++  System.c++  System.h++  Vector.c++  Vector.h++  architecture.dia  fakeclient.cpp  settings  test_actor.c++  test_actor.cpp  test_screen.c++  test_screen.cpp  test_settings.cpp  test_sprite.cpp  test_vector.c++  test_vector.cpp
client/: CMakeLists.txt  Color.c++  Color.cpp  Color.h++  Color.hpp  Point.hpp  Screen.c++  Screen.cpp  Screen.h++  Screen.hpp  Sprite.cpp  Sprite.hpp  System.cpp  System.h++  System.hpp  VideoMode.hpp
doc/: message-protocol.tex
fakeclient/: fakeclient.c++
shared/: AbstractMessage.h++  AbstractScene.hpp  Actor.c++  Actor.cpp  Actor.h++  Actor.hpp  ActorClass.c++  ActorClass.cpp  ActorClass.h++  ActorLockingMessage.h++  ActorLockingMessage.hpp  Exception.c++  Exception.cpp  Exception.h++  ObjectiveMessages.h++  Settings.cpp  Settings.hpp  Vector.c++  Vector.cpp  Vector.h++  Vector.hpp
